--- a/css/reset.css
+++ b/css/reset.css
@@ -9,6 +9,7 @@
 html {
   font-size: 16px;
   -webkit-text-size-adjust: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -47,6 +48,10 @@ h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
   font-weight: inherit;
   font-size: inherit;
+}
+
+[tabindex="-1"]:focus {
+  outline: none;
 }
 
 p {
